--- a/AASINGLEFILE.html
+++ b/AASINGLEFILE.html
@@ -2176,7 +2176,16 @@ const files = [
                         btn.type = 'button';
                         btn.value = file;
                         btn.onclick = () => {
-                            fetch(`https://cdn.jsdelivr.net/gh/bubbls/ugs-singlefile/UGS-Files/${file}',?t=${Date.now()}`)
+
+                            function normalizeFileName(name) {
+                                if (name.includes('.') && name.lastIndexOf('.') > 0) return name;
+                                return name + '.html';
+                            }
+
+                            const normalized = normalizeFileName(file);
+                            const encoded = encodeURIComponent(normalized);
+
+                            fetch(`https://cdn.jsdelivr.net/gh/bubbls/ugs-singlefile/UGS-Files/${encoded}?t=${Date.now()}`)
                                 .then(response => response.text())
                                 .then(text => {
                                     const newWin = window.open("about:blank", "_blank");
